--- a/headline.css
+++ b/headline.css
@@ -1,21 +1,19 @@
 #second-headline{
     text-align: center; 
   }
-  
-  .lhs-subdiv {
-    margin: 90px 0px 10px 100px;
-  }
-  
+    
   .info h1{  
-    letter-spacing: 0.2px;
+    /* letter-spacing: 0.2px; */
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
-    font-size: 46px;
+    /* font-size: 46px; */
   }
   
   .info p{
-    margin: 10px 50px 0px 50px;  
-    padding: 25px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     font-family: 'Montserrat', sans-serif;
     font-size: 25px;
   }
@@ -41,4 +39,15 @@
     font-size: 15px;
     margin-top: 10px;
   }
+  }
+
+  @media screen and (max-width: 500px){
+    .lhs h3, .lhs p {
+      text-align: center !important;
+      justify-items: center;
+    }
+  }
+
+  .rhs{
+    padding: 0 !important;
   }
